# simple_pytorch

./: .gitignore  CMakeLists.txt  Makefile  README.md
example/: tensor_exp.cpp  test_allocator.cpp  test_cuda_context.cpp  test_cuda_fill.cpp  test_cuda_kernel.cu  test_dispatcher.cpp  test_exception.cpp  test_thread_pool.cpp
src/: Allocator.cpp  Allocator.h  Context.cpp  Context.h  CpuAllocator.cpp  CpuAllocator.h  Device.cpp  Device.h  DeviceType.cpp  DeviceType.h  MemoryFormat.h  Scalar.h  ScalarType.h  SizesAndStrides.h  Storage.h  StorageImpl.h  Stream.cpp  Stream.h  Tensor.cpp  Tensor.h  TensorImpl.h  TensorIterator.cpp  TensorIterator.h  TensorOptions.h
src/cuda/: CUDAException.cpp  CUDAException.h  CUDAFunctions.cpp  CUDAFunctions.h  CUDAHooks.cpp  CUDAHooks.h  CUDAHooksInterface.cpp  CUDAHooksInterface.h  CUDAStream.cpp  CUDAStream.h  CudaAllocator.cpp  CudaAllocator.h  CudaGuard.h  Loops.cuh  MemoryAccess.cuh  OffsetCalculator.cuh  ThreadConstants.h
src/cuda_ops/: EmptyTensor.cpp  EmptyTensor.h  FillKernel.cuh  RegisterOps.cpp  RegisterOps.cu  TensorFactories.cpp  TensorFactories.h
src/dispatch/: CppSignature.h  DispatchKey.cpp  DispatchKey.h  DispatchKeySet.h  Dispatcher.cpp  Dispatcher.h  DispatcherKeyExtractor.h  FunctionSchema.h  KernelFunction.cpp  KernelFunction.h  Library.cpp  Library.h  MakeBoxedFromUnboxedFunctor.h  OperatorEntry.cpp  OperatorEntry.h  OperatorKernel.h  OperatorName.cpp  OperatorName.h  RegistrationHandleRAII.h  WrapFunctionIntoFunctor.h
src/macros/: CUDAMacros.h  Macros.h
src/ops/: EmptyOps.h  FillOps.h  OpsEverything.cpp
src/utils/: Apply.h  Array.h  ArrayRef.h  CallOnce.h  DimVector.h  Exception.cpp  Exception.h  LeftRight.h  LlvmMathExtras.h  Logging.h  Metaprogramming.h  StringUtils.cpp  StringUtils.h  TypeCast.h  TypeList.h  TypeTraits.h  Typeid.h  intrusive_ptr.h  safe_numeric.h  thread_pool.cpp  thread_pool.h
test/: README.md  allocator_test.cpp  cuda_allocator_test.cpp  dispatcher_test.cpp  library_test.cpp  metaprogramming_test.cpp  tensor_fill_test.cpp  tensor_test.cpp  vectorized_unrolled_kernel_test.cu
